// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Attentive's customEvents destination action: all fields 1`] = `
Object {
  "externalEventId": "*8ANaCHkFXR*[r23fd",
  "occurredAt": "*8ANaCHkFXR*[r23fd",
  "properties": Object {
    "testType": "*8ANaCHkFXR*[r23fd",
  },
  "type": "*8ANaCHkFXR*[r23fd",
  "user": Object {
    "email": "zat@kulihesa.dm",
    "externalIdentifiers": Object {
      "clientUserId": "*8ANaCHkFXR*[r23fd",
    },
    "phone": "*8ANaCHkFXR*[r23fd",
  },
}
`;

exports[`Testing snapshot for Attentive's customEvents destination action: required fields 1`] = `
Object {
  "type": "*8ANaCHkFXR*[r23fd",
  "user": Object {
    "externalIdentifiers": Object {
      "customIdentifiers": Object {
        "userId": "testuserid",
      },
    },
  },
}
`;
